--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.1",
+		"connect-mongo": "^5.1.0",
 		"google-auth-library": "^9.4.2",
 		"mongoose-timestamp": "^0.6.0",
 		"multer": "^1.4.5-lts.1"
