--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-loader-spinner": "^6.1.6",
+		"react-multi-carousel": "^2.8.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.21.2",
 		"react-scripts": "5.0.1",
