--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.6.5",
 		"buffer": "^6.0.3",
+		"embla-carousel-autoplay": "^8.1.2",
+		"embla-carousel-react": "^8.1.1",
 		"gapi-script": "^1.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"materialize-css": "^1.0.0-rc.2",
@@ -25,6 +27,7 @@
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.21.2",
 		"react-scripts": "5.0.1",
+		"react-stacked-center-carousel": "^1.0.14",
 		"reactjs-popup": "^2.0.6",
 		"web-vitals": "^2.1.4",
 		"yup": "^1.3.3"
