--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@headlessui/react": "^1.7.18",
+		"@headlessui/react": "^1.7.19",
 		"@heroicons/react": "^2.1.1",
 		"@hookform/resolvers": "^3.3.4",
 		"@react-oauth/google": "^0.12.1",
@@ -13,8 +13,6 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^1.6.5",
 		"buffer": "^6.0.3",
-		"embla-carousel-autoplay": "^8.1.2",
-		"embla-carousel-react": "^8.1.1",
 		"gapi-script": "^1.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"materialize-css": "^1.0.0-rc.2",
@@ -23,10 +21,12 @@
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.51.0",
 		"react-loader-spinner": "^6.1.6",
+		"react-loading-skeleton": "^3.4.0",
 		"react-multi-carousel": "^2.8.5",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.21.2",
 		"react-scripts": "5.0.1",
+		"react-slideshow-image": "^4.3.1",
 		"react-stacked-center-carousel": "^1.0.14",
 		"reactjs-popup": "^2.0.6",
 		"web-vitals": "^2.1.4",
